--- a/Readme
+++ b/Readme
@@ -1,2 +1,8 @@
 alembic revision --autogenerate -m "Create initial todo_lists and todo_items tables"
 alembic upgrade head
+
+turnserver -c turnserver.conf
+
+uvicorn app.main:app --reload --host 0.0.0.0 --port 8000
+
+uvicorn lmstudio:app --reload --host 0.0.0.0 --port 8080
