--- a/Readme
+++ b/Readme
@@ -99,6 +99,7 @@ This project is fully containerized with Docker, making it easy to run.
 *   **AI Model Hosting:** LM Studio
 *   **Containerization:** Docker / Docker Compose
 
+# Commands
 alembic revision --autogenerate -m "Create initial todo_lists and todo_items tables"
 alembic upgrade head
 
@@ -106,4 +107,9 @@ turnserver -c turnserver.conf
 
 uvicorn app.main:app --reload --host 0.0.0.0 --port 8000
 
-uvicorn lmstudio:app --reload --host 0.0.0.0 --port 8080
+
+docker-compose -f docker-compose.yml -f docker-compose.dev.yml up --build
+
+
+stop and remove all containers:
+docker-compose -f docker-compose.yml -f docker-compose.dev.yml down
