--- a/Readme
+++ b/Readme
@@ -113,3 +113,10 @@ docker-compose -f docker-compose.yml -f docker-compose.dev.yml up --build
 
 stop and remove all containers:
 docker-compose -f docker-compose.yml -f docker-compose.dev.yml down
+
+mkcert localhost 127.0.0.1 ::1 192.168.1.3
+
+
+ docker-compose -f compose.yml -f compose.dev.yml up --build
+
+sudo nginx
