--- a/Readme
+++ b/Readme
@@ -118,5 +118,5 @@ mkcert localhost 127.0.0.1 ::1 192.168.1.3
 
 
  docker-compose -f compose.yml -f compose.dev.yml up --build
-
+<!-- sudo brew services start dnsmasq -->
 sudo nginx
