--- a/Readme
+++ b/Readme
@@ -1,2 +1,3 @@
-alembic revision --autogenerate -m "Create initial todo_lists and todo_items tables"
-alembic upgrade head
+chmod +x start-stop.sh
+
+./start-stop.sh
