--- a/Readme
+++ b/Readme
@@ -1,23 +1,21 @@
-#  DONT USE THE DOCKERS
 # AI Agent with MCP Integration
 
-## How to Run the Stack
-the scripts is not recommended
-# AI Agent with MCP Integration
+> **⚠️ Note:** Docker setup is available but not recommended. Follow manual setup below.
 
-> ⚠️ **Note**: Docker setup and scripts is available but not recommended. Follow manual setup below.
+## 📋 Prerequisites
 
-## Prerequisites
 - [Docker Desktop](https://www.docker.com/products/docker-desktop/) (installed and running)
 - [LM Studio](https://lmstudio.ai/) (with model downloaded and server started)
 - Node.js and npm
-- Python 3.10
+- Python 3.8+
 
-## Quick Start
+## 🚀 Quick Start
 
 ### 1. Environment Setup
+
 Create `.env` in the `todo-list` directory:
-```env
+
+```bash
 # PostgreSQL Settings
 POSTGRES_USER=appuser
 POSTGRES_PASSWORD=a-strong-password
@@ -30,49 +28,55 @@ LIVEKIT_API_SECRET=secret
 ```
 
 ### 2. Start Services
-Run these commands in separate terminals:
 
+Run these commands in **separate terminals**:
+
+**Terminal 1: LiveKit server**
 ```bash
-# Terminal 1: LiveKit server
 livekit-server --dev
+```
 
-# Terminal 2: Infrastructure (database)
+**Terminal 2: Infrastructure (database)**
+```bash
 docker compose -f compose.infra.yml up --build
+```
 
-# Terminal 3: Backend API
+**Terminal 3: Backend API**
+```bash
 uvicorn app.main:app --reload --host 0.0.0.0 --port 8000
+```
 
-# Terminal 4: Frontend
+**Terminal 4: Frontend**
+```bash
 cd frontend
 npm install
 npm run dev
 ```
 
 ### 3. Access Application
-Open browser: `http://localhost:5173`
 
-## Technology Stack
-- **Backend**: Python/FastAPI
-- **Frontend**: React/TypeScript/Vite  
-- **Database**: PostgreSQL
-- **Real-Time**: WebRTC with LiveKit
-- **AI**: LM Studio
-- **Containers**: Docker/Docker Compose
+Open browser: http://localhost:5173
 
-## Development Commands
+## 🛠️ Technology Stack
 
-<details>
-<summary>Database migrations</summary>
+| Component | Technology |
+|-----------|------------|
+| **Backend** | Python/FastAPI |
+| **Frontend** | React/TypeScript/Vite |
+| **Database** | PostgreSQL |
+| **Real-Time** | WebRTC with LiveKit |
+| **AI** | LM Studio |
+| **Containers** | Docker/Docker Compose |
 
+## 🔧 Development Commands
+
+### Database migrations
 ```bash
 alembic revision --autogenerate -m "Create initial todo_lists and todo_items tables"
 alembic upgrade head
 ```
-</details>
 
-<details>
-<summary>Docker operations</summary>
-
+### Docker operations
 ```bash
 # Start with dev overrides
 docker-compose -f docker-compose.yml -f docker-compose.dev.yml up --build
@@ -80,17 +84,13 @@ docker-compose -f docker-compose.yml -f docker-compose.dev.yml up --build
 # Stop and remove
 docker-compose -f docker-compose.yml -f docker-compose.dev.yml down
 ```
-</details>
 
-<details>
-<summary>SSL certificates</summary>
-
+### SSL certificates
 ```bash
 mkcert localhost 127.0.0.1 ::1 192.168.1.3
 ```
-</details>
 
 ---
 
-### Legacy Version
+## 📚 Legacy Version
 Previous voice API implementation: [echo-voiceapi](https://github.com/fady17/echo-voiceapi/tree/dev)
