--- a/Readme
+++ b/Readme
@@ -87,7 +87,9 @@ docker-compose -f docker-compose.yml -f docker-compose.dev.yml down
 
 ### SSL certificates
 ```bash
-mkcert localhost 127.0.0.1 ::1 192.168.1.3
+say -o speech.aiff "Create a new list called shopping"
+ffmpeg -i speech.aiff -acodec libmp3lame -q:a 2 input.mp3
+rm speech.aiff
 ```
 
 ---
